--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "devDependencies": {},
   "scripts": {
+
+    "start": "node app.js"
+
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
